--- a/practical1/zachparent/Exercise_2.ipynb
+++ b/practical1/zachparent/Exercise_2.ipynb
@@ -38,11 +38,16 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import joblib\n",
     "from sklearn import tree\n",
+    "import joblib\n",
+    "import warnings\n",
     "\n",
-    "music_data = pd.read_csv('https://raw.githubusercontent.com/mosh-hamedani/python-supplementary-materials/main/music.csv')\n",
-    "music_data.values\n"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "music_data = pd.read_csv(\n",
+    "    \"https://raw.githubusercontent.com/mosh-hamedani/python-supplementary-materials/main/music.csv\"\n",
+    ")\n",
+    "music_data.values"
    ]
   },
   {
@@ -57,19 +62,11 @@
       "Input data: [[21, 1], [22, 0]]\n",
       "Predictions: ['HipHop' 'Dance']\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
-    "X = music_data.drop(columns=['genre'])\n",
-    "y = music_data['genre']\n",
+    "X = music_data.drop(columns=[\"genre\"])\n",
+    "y = music_data[\"genre\"]\n",
     "\n",
     "model = DecisionTreeClassifier()\n",
     "model.fit(X, y)\n",
@@ -89,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.75\n"
+      "Score: 1.0\n"
      ]
     }
    ],
@@ -108,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = joblib.dump(model, 'music-recommender.joblib')"
+    "model = joblib.dump(model, \"music-recommender.joblib\")"
    ]
   },
   {
@@ -116,14 +113,6 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -136,8 +125,7 @@
     }
    ],
    "source": [
-    "\n",
-    "model = joblib.load('music-recommender.joblib')\n",
+    "model = joblib.load(\"music-recommender.joblib\")\n",
     "predictions = model.predict([[21, 1]])\n",
     "predictions"
    ]
@@ -148,12 +136,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree.export_graphviz(model, out_file='music-recommender.dot',\n",
-    "                    feature_names=['age', 'gender'],\n",
-    "                    class_names=sorted(y.unique()),\n",
-    "                    label='all',\n",
-    "                    rounded=True,\n",
-    "                    filled=True)"
+    "tree.export_graphviz(\n",
+    "    model,\n",
+    "    out_file=\"music-recommender.dot\",\n",
+    "    feature_names=[\"age\", \"gender\"],\n",
+    "    class_names=sorted(y.unique()),\n",
+    "    label=\"all\",\n",
+    "    rounded=True,\n",
+    "    filled=True,\n",
+    ")"
    ]
   }
  ],
