use relative path for gif

--- a/theory2/steepest_descent.ipynb
+++ b/theory2/steepest_descent.ipynb
@@ -169,7 +169,7 @@
    "source": [
     "# Steepest Descent Animation\n",
     "\n",
-    "![Steepest Descent Animation](steepest_descent.gif)"
+    "![Steepest Descent Animation](./steepest_descent.gif)"
    ]
   }
  ],
