--- a/work2/preprocess.ipynb
+++ b/work2/preprocess.ipynb
@@ -4,11 +4,476 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.io.arff import loadarff\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.compose import ColumnTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>cap-surface</th>\n",
+       "      <th>cap-color</th>\n",
+       "      <th>bruises?</th>\n",
+       "      <th>odor</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>gill-size</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>veil-type</th>\n",
+       "      <th>veil-color</th>\n",
+       "      <th>ring-number</th>\n",
+       "      <th>ring-type</th>\n",
+       "      <th>spore-print-color</th>\n",
+       "      <th>population</th>\n",
+       "      <th>habitat</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>b'x'</td>\n",
+       "      <td>b's'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b't'</td>\n",
+       "      <td>b'l'</td>\n",
+       "      <td>b'f'</td>\n",
+       "      <td>b'c'</td>\n",
+       "      <td>b'b'</td>\n",
+       "      <td>b'k'</td>\n",
+       "      <td>b'e'</td>\n",
+       "      <td>...</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'o'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'k'</td>\n",
+       "      <td>b'n'</td>\n",
+       "      <td>b'm'</td>\n",
+       "      <td>b'e'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b'k'</td>\n",
+       "      <td>b'y'</td>\n",
+       "      <td>b'e'</td>\n",
+       "      <td>b'f'</td>\n",
+       "      <td>b's'</td>\n",
+       "      <td>b'f'</td>\n",
+       "      <td>b'c'</td>\n",
+       "      <td>b'n'</td>\n",
+       "      <td>b'b'</td>\n",
+       "      <td>b't'</td>\n",
+       "      <td>...</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'o'</td>\n",
+       "      <td>b'e'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'v'</td>\n",
+       "      <td>b'd'</td>\n",
+       "      <td>b'p'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b'x'</td>\n",
+       "      <td>b'y'</td>\n",
+       "      <td>b'y'</td>\n",
+       "      <td>b't'</td>\n",
+       "      <td>b'a'</td>\n",
+       "      <td>b'f'</td>\n",
+       "      <td>b'c'</td>\n",
+       "      <td>b'b'</td>\n",
+       "      <td>b'n'</td>\n",
+       "      <td>b'e'</td>\n",
+       "      <td>...</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'o'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'k'</td>\n",
+       "      <td>b's'</td>\n",
+       "      <td>b'm'</td>\n",
+       "      <td>b'e'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b'x'</td>\n",
+       "      <td>b'y'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b't'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'f'</td>\n",
+       "      <td>b'c'</td>\n",
+       "      <td>b'n'</td>\n",
+       "      <td>b'k'</td>\n",
+       "      <td>b'e'</td>\n",
+       "      <td>...</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'o'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'k'</td>\n",
+       "      <td>b'v'</td>\n",
+       "      <td>b'u'</td>\n",
+       "      <td>b'p'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>b'x'</td>\n",
+       "      <td>b'y'</td>\n",
+       "      <td>b'n'</td>\n",
+       "      <td>b'f'</td>\n",
+       "      <td>b'f'</td>\n",
+       "      <td>b'f'</td>\n",
+       "      <td>b'c'</td>\n",
+       "      <td>b'n'</td>\n",
+       "      <td>b'b'</td>\n",
+       "      <td>b't'</td>\n",
+       "      <td>...</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'p'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'o'</td>\n",
+       "      <td>b'e'</td>\n",
+       "      <td>b'w'</td>\n",
+       "      <td>b'v'</td>\n",
+       "      <td>b'l'</td>\n",
+       "      <td>b'p'</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  cap-shape cap-surface cap-color bruises?  odor gill-attachment gill-spacing  \\\n",
+       "0      b'x'        b's'      b'w'     b't'  b'l'            b'f'         b'c'   \n",
+       "1      b'k'        b'y'      b'e'     b'f'  b's'            b'f'         b'c'   \n",
+       "2      b'x'        b'y'      b'y'     b't'  b'a'            b'f'         b'c'   \n",
+       "3      b'x'        b'y'      b'w'     b't'  b'p'            b'f'         b'c'   \n",
+       "4      b'x'        b'y'      b'n'     b'f'  b'f'            b'f'         b'c'   \n",
+       "\n",
+       "  gill-size gill-color stalk-shape  ... stalk-color-above-ring  \\\n",
+       "0      b'b'       b'k'        b'e'  ...                   b'w'   \n",
+       "1      b'n'       b'b'        b't'  ...                   b'p'   \n",
+       "2      b'b'       b'n'        b'e'  ...                   b'w'   \n",
+       "3      b'n'       b'k'        b'e'  ...                   b'w'   \n",
+       "4      b'n'       b'b'        b't'  ...                   b'w'   \n",
+       "\n",
+       "  stalk-color-below-ring veil-type veil-color ring-number ring-type  \\\n",
+       "0                   b'w'      b'p'       b'w'        b'o'      b'p'   \n",
+       "1                   b'w'      b'p'       b'w'        b'o'      b'e'   \n",
+       "2                   b'w'      b'p'       b'w'        b'o'      b'p'   \n",
+       "3                   b'w'      b'p'       b'w'        b'o'      b'p'   \n",
+       "4                   b'p'      b'p'       b'w'        b'o'      b'e'   \n",
+       "\n",
+       "  spore-print-color population habitat class  \n",
+       "0              b'k'       b'n'    b'm'  b'e'  \n",
+       "1              b'w'       b'v'    b'd'  b'p'  \n",
+       "2              b'k'       b's'    b'm'  b'e'  \n",
+       "3              b'k'       b'v'    b'u'  b'p'  \n",
+       "4              b'w'       b'v'    b'l'  b'p'  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data, meta = loadarff('datasetsCBR/mushroom/mushroom.fold.000000.train.arff')\n",
+    "train_df = pd.DataFrame(raw_data, columns=meta.names())\n",
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>cap-surface</th>\n",
+       "      <th>cap-color</th>\n",
+       "      <th>bruises?</th>\n",
+       "      <th>odor</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>gill-size</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>veil-type</th>\n",
+       "      <th>veil-color</th>\n",
+       "      <th>ring-number</th>\n",
+       "      <th>ring-type</th>\n",
+       "      <th>spore-print-color</th>\n",
+       "      <th>population</th>\n",
+       "      <th>habitat</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cap-shape  cap-surface  cap-color  bruises?  odor  gill-attachment  \\\n",
+       "0          5            2          8         1     3                1   \n",
+       "1          3            3          2         0     7                1   \n",
+       "2          5            3          9         1     0                1   \n",
+       "3          5            3          8         1     6                1   \n",
+       "4          5            3          4         0     2                1   \n",
+       "\n",
+       "   gill-spacing  gill-size  gill-color  stalk-shape  ...  \\\n",
+       "0             0          0           4            0  ...   \n",
+       "1             0          1           0            1  ...   \n",
+       "2             0          0           5            0  ...   \n",
+       "3             0          1           4            0  ...   \n",
+       "4             0          1           0            1  ...   \n",
+       "\n",
+       "   stalk-color-above-ring  stalk-color-below-ring  veil-type  veil-color  \\\n",
+       "0                       7                       7          0           2   \n",
+       "1                       6                       7          0           2   \n",
+       "2                       7                       7          0           2   \n",
+       "3                       7                       7          0           2   \n",
+       "4                       7                       6          0           2   \n",
+       "\n",
+       "   ring-number  ring-type  spore-print-color  population  habitat  class  \n",
+       "0            1          4                  2           2        3      0  \n",
+       "1            1          0                  7           4        0      1  \n",
+       "2            1          4                  2           3        3      0  \n",
+       "3            1          4                  2           4        5      1  \n",
+       "4            1          0                  7           4        2      1  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for col in train_df.columns:\n",
+    "    label_encoder = LabelEncoder()\n",
+    "    train_df[col] = label_encoder.fit_transform(train_df[col])\n",
+    "train_df.head()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv-iml",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
