use glob to read all train and test files

--- a/work2/preprocess.ipynb
+++ b/work2/preprocess.ipynb
@@ -1,11 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -24,6 +19,36 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading datasetsCBR/mushroom/mushroom.fold.000000.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000001.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000002.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000003.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000004.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000005.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000006.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000007.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000008.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000009.train.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000000.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000001.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000002.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000003.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000004.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000005.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000006.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000007.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000008.test.arff\n",
+      "Loading datasetsCBR/mushroom/mushroom.fold.000009.test.arff\n",
+      "\n",
+      "Number of training dataframes: 10\n",
+      "Number of test dataframes: 10\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -232,9 +257,27 @@
     }
    ],
    "source": [
-    "raw_data, meta = loadarff('datasetsCBR/mushroom/mushroom.fold.000000.train.arff')\n",
-    "train_df = pd.DataFrame(raw_data, columns=meta.names())\n",
-    "train_df.head()"
+    "import glob\n",
+    "\n",
+    "train_dfs = []\n",
+    "test_dfs = []\n",
+    "\n",
+    "# Load all train and test files\n",
+    "for train_or_test in ['train', 'test']:\n",
+    "    for file in sorted(glob.glob(f'datasetsCBR/mushroom/mushroom.fold.*.{train_or_test}.arff')):\n",
+    "        raw_data, meta = loadarff(file)\n",
+    "        print(f\"Loading {file}\")\n",
+    "        df = pd.DataFrame(raw_data, columns=meta.names())\n",
+    "        if train_or_test == 'train':\n",
+    "            train_dfs.append(df)\n",
+    "        else:\n",
+    "            test_dfs.append(df)\n",
+    "\n",
+    "# Display the number of train and test dataframes\n",
+    "print(f\"\\nNumber of training dataframes: {len(train_dfs)}\")\n",
+    "print(f\"Number of test dataframes: {len(test_dfs)}\")\n",
+    "print()\n",
+    "train_dfs[0].head()"
    ]
   },
   {
@@ -450,10 +493,40 @@
     }
    ],
    "source": [
-    "for col in train_df.columns:\n",
-    "    label_encoder = LabelEncoder()\n",
-    "    train_df[col] = label_encoder.fit_transform(train_df[col])\n",
-    "train_df.head()"
+    "for df in train_dfs + test_dfs:\n",
+    "    for col in df.columns:\n",
+    "        label_encoder = LabelEncoder()\n",
+    "        df[col] = label_encoder.fit_transform(df[col])\n",
+    "\n",
+    "train_dfs[0].head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean accuracy: 0.9995085995085995\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for train_df, test_df in zip(train_dfs, test_dfs):\n",
+    "    decision_tree = DecisionTreeClassifier()\n",
+    "    decision_tree.fit(train_df.drop('class', axis=1), train_df['class'])\n",
+    "    preds = decision_tree.predict(test_df.drop('class', axis=1))\n",
+    "    results.append(accuracy_score(test_df['class'], preds))\n",
+    "\n",
+    "print(f\"Mean accuracy: {np.mean(results)}\")\n"
    ]
   }
  ],
