add load_data function

--- a/work2/preprocess.ipynb
+++ b/work2/preprocess.ipynb
@@ -11,38 +11,100 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.io.arff import loadarff\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.compose import ColumnTransformer"
+    "import glob\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO, format=\"%(levelname)s - %(message)s\")\n",
+    "logger = logging.getLogger()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(\n",
+    "    train_file_pattern: str, test_file_pattern: str\n",
+    ") -> tuple[list[pd.DataFrame], list[pd.DataFrame]]:\n",
+    "    \"\"\"\n",
+    "    Load train and test data from ARFF files matching the given patterns.\n",
+    "\n",
+    "    This function reads ARFF files for both training and test datasets,\n",
+    "    converts them to pandas DataFrames, and returns them as lists.\n",
+    "\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    train_file_pattern : str\n",
+    "        Glob pattern to match training data files.\n",
+    "    test_file_pattern : str\n",
+    "        Glob pattern to match test data files.\n",
+    "\n",
+    "    Returns:\n",
+    "    --------\n",
+    "    tuple[list[pd.DataFrame], list[pd.DataFrame]]\n",
+    "        A tuple containing two lists:\n",
+    "        1. List of DataFrames for training data.\n",
+    "        2. List of DataFrames for test data.\n",
+    "\n",
+    "    Note:\n",
+    "    -----\n",
+    "    The function uses scipy.io.arff.loadarff to read ARFF files and\n",
+    "    converts the data to pandas DataFrames. Files are sorted to ensure\n",
+    "    consistent ordering across runs.\n",
+    "    \"\"\"\n",
+    "    train_dfs = []\n",
+    "    test_dfs = []\n",
+    "    for is_test, file_pattern in [\n",
+    "        (False, train_file_pattern),\n",
+    "        (True, test_file_pattern),\n",
+    "    ]:\n",
+    "        for file in sorted(glob.glob(file_pattern)):\n",
+    "            raw_data, meta = loadarff(file)\n",
+    "            logger.info(f\"Loading {file}\")\n",
+    "            df = pd.DataFrame(raw_data, columns=meta.names())\n",
+    "            if is_test:\n",
+    "                test_dfs.append(df)\n",
+    "            else:\n",
+    "                train_dfs.append(df)\n",
+    "    return train_dfs, test_dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000000.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000001.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000002.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000003.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000004.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000005.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000006.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000007.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000008.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000009.train.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000000.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000001.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000002.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000003.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000004.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000005.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000006.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000007.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000008.test.arff\n",
+      "INFO - Loading datasetsCBR/mushroom/mushroom.fold.000009.test.arff\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading datasetsCBR/mushroom/mushroom.fold.000000.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000001.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000002.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000003.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000004.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000005.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000006.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000007.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000008.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000009.train.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000000.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000001.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000002.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000003.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000004.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000005.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000006.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000007.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000008.test.arff\n",
-      "Loading datasetsCBR/mushroom/mushroom.fold.000009.test.arff\n",
       "\n",
       "Number of training dataframes: 10\n",
       "Number of test dataframes: 10\n",
@@ -251,27 +313,16 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import glob\n",
-    "\n",
-    "train_dfs = []\n",
-    "test_dfs = []\n",
-    "\n",
-    "# Load all train and test files\n",
-    "for train_or_test in ['train', 'test']:\n",
-    "    for file in sorted(glob.glob(f'datasetsCBR/mushroom/mushroom.fold.*.{train_or_test}.arff')):\n",
-    "        raw_data, meta = loadarff(file)\n",
-    "        print(f\"Loading {file}\")\n",
-    "        df = pd.DataFrame(raw_data, columns=meta.names())\n",
-    "        if train_or_test == 'train':\n",
-    "            train_dfs.append(df)\n",
-    "        else:\n",
-    "            test_dfs.append(df)\n",
+    "train_dfs, test_dfs = load_data(\n",
+    "    \"datasetsCBR/mushroom/mushroom.fold.*.train.arff\",\n",
+    "    \"datasetsCBR/mushroom/mushroom.fold.*.test.arff\",\n",
+    ")\n",
     "\n",
     "# Display the number of train and test dataframes\n",
     "print(f\"\\nNumber of training dataframes: {len(train_dfs)}\")\n",
@@ -282,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +538,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,19 +549,19 @@
     "        label_encoder = LabelEncoder()\n",
     "        df[col] = label_encoder.fit_transform(df[col])\n",
     "\n",
-    "train_dfs[0].head()\n"
+    "train_dfs[0].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean accuracy: 0.9995085995085995\n"
+      "Mean accuracy: 1.0\n"
      ]
     }
    ],
@@ -522,11 +573,11 @@
     "\n",
     "for train_df, test_df in zip(train_dfs, test_dfs):\n",
     "    decision_tree = DecisionTreeClassifier()\n",
-    "    decision_tree.fit(train_df.drop('class', axis=1), train_df['class'])\n",
-    "    preds = decision_tree.predict(test_df.drop('class', axis=1))\n",
-    "    results.append(accuracy_score(test_df['class'], preds))\n",
+    "    decision_tree.fit(train_df.drop(\"class\", axis=1), train_df[\"class\"])\n",
+    "    preds = decision_tree.predict(test_df.drop(\"class\", axis=1))\n",
+    "    results.append(accuracy_score(test_df[\"class\"], preds))\n",
     "\n",
-    "print(f\"Mean accuracy: {np.mean(results)}\")\n"
+    "print(f\"Mean accuracy: {np.mean(results)}\")"
    ]
   }
  ],
