add basic preprocessing and a decision tree classifier for hepatitis dataset

--- a/work2/preprocess.ipynb
+++ b/work2/preprocess.ipynb
@@ -10,7 +10,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.io.arff import loadarff\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.metrics import classification_report\n",
     "import glob\n",
     "import logging\n",
     "\n",
@@ -578,6 +580,529 @@
     "    results.append(accuracy_score(test_df[\"class\"], preds))\n",
     "\n",
     "print(f\"Mean accuracy: {np.mean(results)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000000.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000001.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000002.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000003.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000004.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000005.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000006.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000007.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000008.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000009.train.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000000.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000001.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000002.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000003.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000004.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000005.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000006.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000007.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000008.test.arff\n",
+      "INFO - Loading datasetsCBR/hepatitis/hepatitis.fold.000009.test.arff\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of training dataframes: 10\n",
+      "Number of test dataframes: 10\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>STEROID</th>\n",
+       "      <th>ANTIVIRALS</th>\n",
+       "      <th>FATIGUE</th>\n",
+       "      <th>MALAISE</th>\n",
+       "      <th>ANOREXIA</th>\n",
+       "      <th>LIVER_BIG</th>\n",
+       "      <th>LIVER_FIRM</th>\n",
+       "      <th>SPLEEN_PALPABLE</th>\n",
+       "      <th>SPIDERS</th>\n",
+       "      <th>ASCITES</th>\n",
+       "      <th>VARICES</th>\n",
+       "      <th>BILIRUBIN</th>\n",
+       "      <th>ALK_PHOSPHATE</th>\n",
+       "      <th>SGOT</th>\n",
+       "      <th>ALBUMIN</th>\n",
+       "      <th>PROTIME</th>\n",
+       "      <th>HISTOLOGY</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>b'female'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'DIE'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>b'female'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'LIVE'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>58.0</td>\n",
+       "      <td>b'male'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'LIVE'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>b'female'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'LIVE'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>b'female'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'LIVE'</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    AGE        SEX STEROID ANTIVIRALS FATIGUE MALAISE ANOREXIA LIVER_BIG  \\\n",
+       "0  38.0  b'female'   b'no'      b'no'  b'yes'  b'yes'   b'yes'    b'yes'   \n",
+       "1  54.0  b'female'   b'no'      b'no'  b'yes'  b'yes'    b'no'    b'yes'   \n",
+       "2  58.0    b'male'  b'yes'      b'no'  b'yes'   b'no'    b'no'    b'yes'   \n",
+       "3  23.0  b'female'  b'yes'      b'no'   b'no'   b'no'    b'no'      b'?'   \n",
+       "4  31.0  b'female'  b'yes'      b'no'   b'no'   b'no'    b'no'    b'yes'   \n",
+       "\n",
+       "  LIVER_FIRM SPLEEN_PALPABLE SPIDERS ASCITES VARICES  BILIRUBIN  \\\n",
+       "0     b'yes'           b'no'  b'yes'  b'yes'  b'yes'        1.2   \n",
+       "1      b'no'           b'no'   b'no'  b'yes'   b'no'        1.2   \n",
+       "2     b'yes'           b'no'  b'yes'   b'no'   b'no'        1.4   \n",
+       "3       b'?'            b'?'    b'?'    b'?'    b'?'        4.6   \n",
+       "4      b'no'           b'no'   b'no'   b'no'   b'no'        1.0   \n",
+       "\n",
+       "   ALK_PHOSPHATE  SGOT  ALBUMIN  PROTIME HISTOLOGY    Class  \n",
+       "0          118.0  16.0      2.8      NaN    b'yes'   b'DIE'  \n",
+       "1           85.0  92.0      3.1     66.0    b'yes'  b'LIVE'  \n",
+       "2          175.0  55.0      2.7     36.0     b'no'  b'LIVE'  \n",
+       "3           56.0  16.0      4.6      NaN     b'no'  b'LIVE'  \n",
+       "4           85.0  20.0      4.0    100.0     b'no'  b'LIVE'  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dfs, test_dfs = load_data(\n",
+    "    \"datasetsCBR/hepatitis/hepatitis.fold.*.train.arff\",\n",
+    "    \"datasetsCBR/hepatitis/hepatitis.fold.*.test.arff\",\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nNumber of training dataframes: {len(train_dfs)}\")\n",
+    "print(f\"Number of test dataframes: {len(test_dfs)}\")\n",
+    "print()\n",
+    "train_dfs[0].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AGE                  0\n",
+       "SEX                  0\n",
+       "STEROID              0\n",
+       "ANTIVIRALS           0\n",
+       "FATIGUE              0\n",
+       "MALAISE              0\n",
+       "ANOREXIA             0\n",
+       "LIVER_BIG            0\n",
+       "LIVER_FIRM           0\n",
+       "SPLEEN_PALPABLE      0\n",
+       "SPIDERS              0\n",
+       "ASCITES              0\n",
+       "VARICES              0\n",
+       "BILIRUBIN           54\n",
+       "ALK_PHOSPHATE      261\n",
+       "SGOT                36\n",
+       "ALBUMIN            144\n",
+       "PROTIME            603\n",
+       "HISTOLOGY            0\n",
+       "Class                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat(train_dfs).isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>STEROID</th>\n",
+       "      <th>ANTIVIRALS</th>\n",
+       "      <th>FATIGUE</th>\n",
+       "      <th>MALAISE</th>\n",
+       "      <th>ANOREXIA</th>\n",
+       "      <th>LIVER_BIG</th>\n",
+       "      <th>LIVER_FIRM</th>\n",
+       "      <th>SPLEEN_PALPABLE</th>\n",
+       "      <th>SPIDERS</th>\n",
+       "      <th>ASCITES</th>\n",
+       "      <th>VARICES</th>\n",
+       "      <th>BILIRUBIN</th>\n",
+       "      <th>ALK_PHOSPHATE</th>\n",
+       "      <th>SGOT</th>\n",
+       "      <th>ALBUMIN</th>\n",
+       "      <th>PROTIME</th>\n",
+       "      <th>HISTOLOGY</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.180812</td>\n",
+       "      <td>0.396382</td>\n",
+       "      <td>-0.773678</td>\n",
+       "      <td>-1.659874</td>\n",
+       "      <td>-0.025580</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.180812</td>\n",
+       "      <td>-0.328604</td>\n",
+       "      <td>0.072143</td>\n",
+       "      <td>-1.177644</td>\n",
+       "      <td>0.323461</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.011974</td>\n",
+       "      <td>1.648630</td>\n",
+       "      <td>-0.339639</td>\n",
+       "      <td>-1.820617</td>\n",
+       "      <td>-1.421744</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.689431</td>\n",
+       "      <td>-0.965713</td>\n",
+       "      <td>-0.773678</td>\n",
+       "      <td>1.233505</td>\n",
+       "      <td>-0.025580</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.349650</td>\n",
+       "      <td>-0.328604</td>\n",
+       "      <td>-0.729162</td>\n",
+       "      <td>0.269046</td>\n",
+       "      <td>2.301360</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AGE  SEX  STEROID  ANTIVIRALS  FATIGUE  MALAISE  ANOREXIA  LIVER_BIG  \\\n",
+       "0   16    0        1           0        2        2         2          2   \n",
+       "1   32    0        1           0        2        2         1          2   \n",
+       "2   35    1        2           0        2        1         1          2   \n",
+       "3    3    0        2           0        1        1         1          0   \n",
+       "4   10    0        2           0        1        1         1          2   \n",
+       "\n",
+       "   LIVER_FIRM  SPLEEN_PALPABLE  SPIDERS  ASCITES  VARICES  BILIRUBIN  \\\n",
+       "0           2                1        2        2        2  -0.180812   \n",
+       "1           1                1        1        2        1  -0.180812   \n",
+       "2           2                1        2        1        1  -0.011974   \n",
+       "3           0                0        0        0        0   2.689431   \n",
+       "4           1                1        1        1        1  -0.349650   \n",
+       "\n",
+       "   ALK_PHOSPHATE      SGOT   ALBUMIN   PROTIME  HISTOLOGY  Class  \n",
+       "0       0.396382 -0.773678 -1.659874 -0.025580          1      0  \n",
+       "1      -0.328604  0.072143 -1.177644  0.323461          1      1  \n",
+       "2       1.648630 -0.339639 -1.820617 -1.421744          0      1  \n",
+       "3      -0.965713 -0.773678  1.233505 -0.025580          0      1  \n",
+       "4      -0.328604 -0.729162  0.269046  2.301360          0      1  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_columns = [\"BILIRUBIN\", \"ALK_PHOSPHATE\", \"SGOT\", \"ALBUMIN\", \"PROTIME\"]\n",
+    "for df in train_dfs + test_dfs:\n",
+    "    for col in numerical_columns:\n",
+    "        median_imputer = SimpleImputer(strategy=\"median\")\n",
+    "        standard_scaler = StandardScaler()\n",
+    "        df[col] = standard_scaler.fit_transform(median_imputer.fit_transform(df[[col]]))\n",
+    "\n",
+    "    for col in list(set(df.columns) - set(numerical_columns)):\n",
+    "        label_encoder = LabelEncoder()\n",
+    "        df[col] = label_encoder.fit_transform(df[col])\n",
+    "\n",
+    "train_dfs[0].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.33      0.33      0.33         3\n",
+      "           1       0.82      0.82      0.82        11\n",
+      "\n",
+      "    accuracy                           0.71        14\n",
+      "   macro avg       0.58      0.58      0.58        14\n",
+      "weighted avg       0.71      0.71      0.71        14\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(train_dfs[0].drop(\"Class\", axis=1), train_dfs[0][\"Class\"])\n",
+    "preds = decision_tree.predict(test_dfs[0].drop(\"Class\", axis=1))\n",
+    "print(classification_report(test_dfs[0][\"Class\"], preds))\n"
    ]
   }
  ],
