update function names to use datasets instead of data

--- a/work2/hepatitis.ipynb
+++ b/work2/hepatitis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocess import load_data, preprocess_hepatitis_data"
+    "from preprocess import load_datasets, preprocess_hepatitis_datasets"
    ]
   },
   {
@@ -206,8 +206,8 @@
     }
    ],
    "source": [
-    "train_dfs = load_data('datasetsCBR/hepatitis/hepatitis.fold.*.train.arff')\n",
-    "test_dfs = load_data('datasetsCBR/hepatitis/hepatitis.fold.*.test.arff')\n",
+    "train_dfs = load_datasets('datasetsCBR/hepatitis/hepatitis.fold.*.train.arff')\n",
+    "test_dfs = load_datasets('datasetsCBR/hepatitis/hepatitis.fold.*.test.arff')\n",
     "\n",
     "train_dfs[0].head()\n"
    ]
