--- a/work2/mushroom.ipynb
+++ b/work2/mushroom.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocess import load_data, preprocess_mushrooms_data"
+    "from preprocess import load_datasets, preprocess_mushrooms_datasets\n"
    ]
   },
   {
@@ -222,8 +222,8 @@
     }
    ],
    "source": [
-    "train_dfs = load_data('datasetsCBR/mushroom/mushroom.fold.*.train.arff')\n",
-    "test_dfs = load_data('datasetsCBR/mushroom/mushroom.fold.*.test.arff')\n",
+    "train_dfs = load_datasets('datasetsCBR/mushroom/mushroom.fold.*.train.arff')\n",
+    "test_dfs = load_datasets('datasetsCBR/mushroom/mushroom.fold.*.test.arff')\n",
     "\n",
     "train_dfs[0].head()"
    ]
