--- a/work2/hepatitis.ipynb
+++ b/work2/hepatitis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,52 +60,29 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>50.0</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>b'female'</td>\n",
        "      <td>b'no'</td>\n",
        "      <td>b'no'</td>\n",
        "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
        "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>3.5</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2.8</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'LIVE'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'DIE'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>45.0</td>\n",
-       "      <td>b'male'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'LIVE'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>54.0</td>\n",
        "      <td>b'female'</td>\n",
        "      <td>b'no'</td>\n",
@@ -113,50 +90,73 @@
        "      <td>b'yes'</td>\n",
        "      <td>b'yes'</td>\n",
        "      <td>b'no'</td>\n",
-       "      <td>b'?'</td>\n",
-       "      <td>b'?'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'LIVE'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>58.0</td>\n",
+       "      <td>b'male'</td>\n",
        "      <td>b'yes'</td>\n",
        "      <td>b'no'</td>\n",
        "      <td>b'yes'</td>\n",
        "      <td>b'no'</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>43.0</td>\n",
+       "      <td>b'no'</td>\n",
        "      <td>b'yes'</td>\n",
-       "      <td>b'DIE'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'LIVE'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>35.0</td>\n",
+       "      <td>23.0</td>\n",
        "      <td>b'female'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
        "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
        "      <td>b'no'</td>\n",
        "      <td>b'no'</td>\n",
        "      <td>b'?'</td>\n",
        "      <td>b'?'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "      <td>b'yes'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>2.6</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>b'?'</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>4.6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>b'yes'</td>\n",
-       "      <td>b'DIE'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'LIVE'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>24.0</td>\n",
+       "      <td>31.0</td>\n",
        "      <td>b'female'</td>\n",
-       "      <td>b'no'</td>\n",
-       "      <td>b'no'</td>\n",
        "      <td>b'yes'</td>\n",
+       "      <td>b'no'</td>\n",
+       "      <td>b'no'</td>\n",
        "      <td>b'no'</td>\n",
        "      <td>b'no'</td>\n",
        "      <td>b'yes'</td>\n",
@@ -166,11 +166,11 @@
        "      <td>b'no'</td>\n",
        "      <td>b'no'</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>b'yes'</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>b'no'</td>\n",
        "      <td>b'LIVE'</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -179,28 +179,28 @@
       ],
       "text/plain": [
        "    AGE        SEX STEROID ANTIVIRALS FATIGUE MALAISE ANOREXIA LIVER_BIG  \\\n",
-       "0  50.0  b'female'   b'no'      b'no'  b'yes'   b'no'    b'no'     b'no'   \n",
-       "1  45.0    b'male'   b'no'      b'no'  b'yes'  b'yes'    b'no'    b'yes'   \n",
-       "2  54.0  b'female'   b'no'      b'no'  b'yes'  b'yes'    b'no'      b'?'   \n",
-       "3  35.0  b'female'   b'no'      b'no'  b'yes'   b'no'    b'no'      b'?'   \n",
-       "4  24.0  b'female'   b'no'      b'no'  b'yes'   b'no'    b'no'    b'yes'   \n",
+       "0  38.0  b'female'   b'no'      b'no'  b'yes'  b'yes'   b'yes'    b'yes'   \n",
+       "1  54.0  b'female'   b'no'      b'no'  b'yes'  b'yes'    b'no'    b'yes'   \n",
+       "2  58.0    b'male'  b'yes'      b'no'  b'yes'   b'no'    b'no'    b'yes'   \n",
+       "3  23.0  b'female'  b'yes'      b'no'   b'no'   b'no'    b'no'      b'?'   \n",
+       "4  31.0  b'female'  b'yes'      b'no'   b'no'   b'no'    b'no'    b'yes'   \n",
        "\n",
        "  LIVER_FIRM SPLEEN_PALPABLE SPIDERS ASCITES VARICES  BILIRUBIN  \\\n",
-       "0      b'no'           b'no'   b'no'   b'no'   b'no'        0.9   \n",
-       "1      b'no'          b'yes'   b'no'   b'no'   b'no'        1.0   \n",
-       "2       b'?'          b'yes'   b'no'  b'yes'   b'no'        3.9   \n",
-       "3       b'?'          b'yes'  b'yes'  b'yes'   b'no'        1.5   \n",
+       "0     b'yes'           b'no'  b'yes'  b'yes'  b'yes'        1.2   \n",
+       "1      b'no'           b'no'   b'no'  b'yes'   b'no'        1.2   \n",
+       "2     b'yes'           b'no'  b'yes'   b'no'   b'no'        1.4   \n",
+       "3       b'?'            b'?'    b'?'    b'?'    b'?'        4.6   \n",
        "4      b'no'           b'no'   b'no'   b'no'   b'no'        1.0   \n",
        "\n",
        "   ALK_PHOSPHATE  SGOT  ALBUMIN  PROTIME HISTOLOGY    Class  \n",
-       "0          135.0  42.0      3.5      NaN     b'no'  b'LIVE'  \n",
-       "1           85.0  75.0      NaN      NaN     b'no'  b'LIVE'  \n",
-       "2          120.0  28.0      3.5     43.0    b'yes'   b'DIE'  \n",
-       "3          138.0  58.0      2.6      NaN    b'yes'   b'DIE'  \n",
-       "4            NaN  34.0      4.1      NaN    b'yes'  b'LIVE'  "
+       "0          118.0  16.0      2.8      NaN    b'yes'   b'DIE'  \n",
+       "1           85.0  92.0      3.1     66.0    b'yes'  b'LIVE'  \n",
+       "2          175.0  55.0      2.7     36.0     b'no'  b'LIVE'  \n",
+       "3           56.0  16.0      4.6      NaN     b'no'  b'LIVE'  \n",
+       "4           85.0  20.0      4.0    100.0     b'no'  b'LIVE'  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +209,13 @@
     "train_dfs = load_datasets('datasetsCBR/hepatitis/hepatitis.fold.*.train.arff')\n",
     "test_dfs = load_datasets('datasetsCBR/hepatitis/hepatitis.fold.*.test.arff')\n",
     "\n",
-    "train_dfs[0].head()\n"
+    "train_dfs[0]\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-iml",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
