--- a/work2/hepatitis.ipynb
+++ b/work2/hepatitis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocess import load_datasets, preprocess_hepatitis_datasets"
+    "from tools.preprocess import load_datasets, preprocess_hepatitis_datasets"
    ]
   },
   {
