--- a/work2/mushroom.ipynb
+++ b/work2/mushroom.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocess import load_datasets, preprocess_mushrooms_datasets\n"
+    "from tools.preprocess import load_datasets, preprocess_mushrooms_datasets\n"
    ]
   },
   {
