--- a/work2/synthetic.ipynb
+++ b/work2/synthetic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,30 +12,43 @@
     "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
     "\n",
     "from tools.distance import ManhattanDistance\n",
-    "from tools.voting import MajorityClassVote\n",
+    "from tools.voting import InverseDistanceWeightedVote\n",
     "from tools.knn import KNNClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean: 0.931\n",
-      "Std: 0.01868154169226937\n"
+      "Mean: 0.9339999999999999\n",
+      "Std: 0.037999999999999985\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "X, y = make_classification(n_samples=1000, n_features=6, n_informative=3, n_redundant=2, n_repeated=0, n_classes=2, n_clusters_per_class=1)\n",
+    "X, y = make_classification(\n",
+    "    n_samples=1000,\n",
+    "    n_features=6,\n",
+    "    n_informative=3,\n",
+    "    n_redundant=2,\n",
+    "    n_repeated=0,\n",
+    "    n_classes=2,\n",
+    "    n_clusters_per_class=1,\n",
+    "    random_state=42,\n",
+    ")\n",
     "\n",
     "cv = StratifiedKFold(n_splits=10)\n",
-    "knn = KNNClassifier(k=1, distance_func=ManhattanDistance(), voting_func=MajorityClassVote(), weights=np.ones(X.shape[1]))\n",
+    "knn = KNNClassifier(\n",
+    "    k=1,\n",
+    "    distance_func=ManhattanDistance(),\n",
+    "    voting_func=InverseDistanceWeightedVote(),\n",
+    "    weights=np.ones(X.shape[1]),\n",
+    ")\n",
     "results = cross_validate(knn, X, y, cv=cv, scoring=\"accuracy\")\n",
     "scores = results[\"test_score\"]\n",
     "\n",
